# bf_peakdetect

./: .gitignore  README.md  generate_wrapper.py  meson.build  meson_options.txt
include/: bf_peakdetect.h  fof_brute.hpp  meson.build  peakdetect.hpp
pythonsrc/: __init__.py
src/: bf_peakdetect.cc  bf_peakdetect.cpp  bf_peakdetect.py  fof.cc  fof_brute.cc  peakdetect.cc
testbench/: meson.build  test_bf_peakdetect.py  test_peakdetect.cc
